Fixed some code quality issues